add favicons from realfavicongenerator.net

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta name="description" content="Manuel Garcia's Personal Website" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-touch-icon.png?v=5ABnBwKWzk"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>My website</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon-32x32.png?v=5ABnBwKWzk"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon-16x16.png?v=5ABnBwKWzk"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest?v=5ABnBwKWzk" />
+    <link
+      rel="mask-icon"
+      href="/safari-pinned-tab.svg?v=5ABnBwKWzk"
+      color="#5bbad5"
+    />
+    <link rel="shortcut icon" href="/favicon.ico?v=5ABnBwKWzk" />
+    <meta name="msapplication-TileColor" content="#00aba9" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <title>Manuel Garcia</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
